#
#  Makefile for the DISKD storage driver for the Squid Object Cache server
#
#  $Id: Makefile.am,v 1.2 2005/07/25 06:29:28 magicyang Exp $
#

libexec_PROGRAMS = diskd
LDADD = $(top_builddir)/lib/libmiscutil.a @XTRA_LIBS@

INCLUDES      = -I. -I$(top_builddir)/include -I$(top_srcdir)/include \
		-I$(top_srcdir)/src/
